# opengl-shader

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
legacy_src/: frag.frag  indexbuffer.cpp  indexbuffer.h  main copy 2.cpp  main copy.cpp  renderer.cpp  renderer.h  shader.h  vertex.vert  vertexbuffer.cpp  vertexbuffer.h
src/: input.cpp  input.h  main.cpp  scene.cpp  scene.h  shader.cpp  shader.h  transform.cpp  transform.h  utils.h  vertexbufferobject.cpp  vertexbufferobject.h
src/shaders/: frag.frag  geom.geom  vert.vert
